# agent_framework

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  bash.exe.stackdump  notes.txt  pyproject.toml  trace_viewer.html
.claude/: settings.local.json
.playwright-cli/: page-2026-04-17T19-03-58-996Z.yml  page-2026-04-17T19-04-47-857Z.yml  page-2026-04-17T19-05-26-802Z.yml  page-2026-04-17T19-05-46-161Z.yml  page-2026-04-17T19-05-59-557Z.yml  page-2026-04-17T19-42-52-600Z.yml  page-2026-04-17T19-44-34-313Z.yml  page-2026-04-17T19-44-44-255Z.yml  page-2026-04-17T19-46-23-401Z.yml  page-2026-04-17T19-46-29-366Z.yml  page-2026-04-17T19-46-48-796Z.yml  page-2026-04-17T19-46-53-866Z.yml  page-2026-04-17T19-47-24-231Z.yml  page-2026-04-17T19-47-41-843Z.yml  page-2026-04-17T19-54-58-539Z.yml  page-2026-04-17T19-57-04-333Z.yml  page-2026-04-17T19-57-42-336Z.yml  page-2026-04-17T20-01-20-489Z.yml  page-2026-04-17T20-01-36-495Z.yml
docs/: CLAUDE.md  dial-agent-gap-analysis.md  pages-information-architecture.md  planning-implementation-status.md
scripts/: generate_sdk_docs.py  generate_sphinx_sdk_stubs.py
tests/: conftest.py  test_agent_registry.py  test_agent_response_field.py  test_async_driver.py  test_builtin_tools.py  test_command_registry.py  test_conversation.py  test_dial_driver.py  test_docs_pages_config.py  test_evaluation.py  test_evaluator_cli.py  test_evaluator_sessions.py  test_file_ref_host.py  test_file_reference.py  test_framework_runtime.py  test_headless.py  test_host_lifecycle.py  test_mcp_integration.py  test_memory.py  test_messages.py  test_missing_tool_policy.py  test_openai_driver.py  test_parallel_subagents.py  test_prompt_reference.py  test_resolved_response_format.py  test_runtime_trace_behavior.py  test_runtime_tracing.py  test_skills_installer.py  (+10 more)
(+630 files in other folders)
