[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-framework"
version = "0.1.0"
description = "Generic markdown-defined agent runtime and evaluation framework."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0,<5.0.0",
    "openai>=1.68.0,<2.0.0",
    "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
