[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_framework"
version = "0.3.0"
description = "Generic markdown-defined agent runtime and evaluation framework."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0,<5.0.0",
    "openai>=1.68.0,<2.0.0",
    "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dial = [
    "httpx>=0.24,<1.0",
    "aidial-sdk>=0.17",
]
mcp = [
    "httpx>=0.24,<1.0",
]
web = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.23,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "httpx>=0.24,<1.0",
]

[project.scripts]
agent-eval = "agent_framework_evaluator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_framework.agents" = ["*.md"]
"agent_framework_evaluator" = ["web/**/*", "examples/**/*.md"]

